--- a/index.html
+++ b/index.html
@@ -45,29 +45,29 @@
             <div class="top-menu">
                 <div class="top-section">
                     <div class="left">
-                        <a href="#1"><img class="logo" src="./images/KST-New-Logo-removebg-preview.png" alt="">
+                        <a href="#1"> <img class="logo" src="./images/KST-New-Logo-removebg-preview.png" alt="">
                         </a>
                     </div>
                     <div class="right socials">
                         <a href="">
                             <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-facebook" width="30" height="30" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                        <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                        <path d="M7 10v4h3v7h4v-7h3l1 -4h-4v-2a1 1 0 0 1 1 -1h3v-4h-3a5 5 0 0 0 -5 5v2h-3" />
-                      </svg>
+                            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                            <path d="M7 10v4h3v7h4v-7h3l1 -4h-4v-2a1 1 0 0 1 1 -1h3v-4h-3a5 5 0 0 0 -5 5v2h-3" />
+                          </svg>
                         </a>
                         <a href="">
                             <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-twitter" width="30" height="30" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                            <path d="M22 4.01c-1 .49 -1.98 .689 -3 .99c-1.121 -1.265 -2.783 -1.335 -4.38 -.737s-2.643 2.06 -2.62 3.737v1c-3.245 .083 -6.135 -1.395 -8 -4c0 0 -4.182 7.433 4 11c-1.872 1.247 -3.739 2.088 -6 2c3.308 1.803 6.913 2.423 10.034 1.517c3.58 -1.04 6.522 -3.723 7.651 -7.742a13.84 13.84 0 0 0 .497 -3.753c-.002 -.249 1.51 -2.772 1.818 -4.013z" />
-                          </svg>
+                                <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                                <path d="M22 4.01c-1 .49 -1.98 .689 -3 .99c-1.121 -1.265 -2.783 -1.335 -4.38 -.737s-2.643 2.06 -2.62 3.737v1c-3.245 .083 -6.135 -1.395 -8 -4c0 0 -4.182 7.433 4 11c-1.872 1.247 -3.739 2.088 -6 2c3.308 1.803 6.913 2.423 10.034 1.517c3.58 -1.04 6.522 -3.723 7.651 -7.742a13.84 13.84 0 0 0 .497 -3.753c-.002 -.249 1.51 -2.772 1.818 -4.013z" />
+                              </svg>
                         </a>
                         <a href="">
                             <svg xmlns="http://www.w3.org/2000/svg" class="icon icon-tabler icon-tabler-brand-instagram" width="30" height="30" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffff" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                            <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
-                            <rect x="4" y="4" width="16" height="16" rx="4" />
-                            <circle cx="12" cy="12" r="3" />
-                            <line x1="16.5" y1="7.5" x2="16.5" y2="7.501" />
-                          </svg>
+                                <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                                <rect x="4" y="4" width="16" height="16" rx="4" />
+                                <circle cx="12" cy="12" r="3" />
+                                <line x1="16.5" y1="7.5" x2="16.5" y2="7.501" />
+                              </svg>
                         </a>
                     </div>
                 </div>
@@ -75,88 +75,128 @@
                     <img src="./images/Group 4.png" alt="">
                 </div>
                 <div class="menu">
-                    <div class="divs-menu">
+                    <div class="divs-menu" onclick="elementClickedTab('yellow')">
                         <div class="div yellow">MEC TATE MAKGOE</div>
                         <div class="div triangle triangle_1"></div>
                     </div>
-                    <div class="divs-menu">
+                    <div class="divs-menu" onclick="elementClickedTab('green')">
                         <div class="div green">MESSAGE FROM THE CEO</div>
                         <div class="div triangle triangle_2"></div>
                     </div>
-                    <div class="divs-menu">
+                    <div class="divs-menu" onclick="elementClickedTab('red')">
                         <div class="div red">REFLECTIONS FROM THE KST ADVISORY BOARD CHAIRS</div>
                         <div class="div triangle triangle_3"></div>
                     </div>
                 </div>
             </div>
             <div class="body-content">
-                <div class="content-section">
-                    <div class="iframe">
-                        <div class="iframe-yellow">
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/EpmzkwftJOI?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-                            <div class="details">
-                                <p class="title-details">TATE MAGOE</p>
-                                <p class="subtitle-details">FREE STATE MEC FOR <br> EDUCATION</p>
-                            </div>
-                            <br>
-                        </div>
 
-                        <br>
-                        <img src="/images/KST_Logo_copy-updated.png" alt="">
-                    </div>
-                    <div class="space"></div>
-                    <div class="yellow-content-down">
-                    </div>
-                </div>
-                <div class="content-section">
-                    <p class="title-y">PROVINCIAL AND <br> NATIONAL <br> CONTEXT</p>
-                    <p class="text-context">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Lorem ipsum dolor sit amet,
-                        consectetur
-                    </p>
-                    <br>
-                    <p class="text-context">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Lorem ipsum dolor sit amet,
-                        consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus
-                    </p><br>
-                    <p class="text-context">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Lorem ipsum dolor sit amet,
-                    </p>
-                </div>
             </div>
-            <div class="banner">
-                <p class="banner-text">SCALABLE AND SUSTAINABLE <br> INVESTMENT – WHAT IT LOOKS LIKE <br> AND WHY IT WORKED IN THE <br> FREE STATE.
 
-                </p>
-            </div>
             <br> <br>
-            <div class="text-section-tab">
-                <p class="text-tab">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Lorem ipsum dolor sit amet,
-                    consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Lorem ipsum dolor sit amet, consectetur
-                    adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Lorem ipsum dolor sit amet, consectetur adipiscing
-                    elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.
-                </p>
+            <div class="content-section yellow-content">
+                <div class="vid-section-wrapper">
+                    <div class="vid-container">
+                        <video src="./KST VID FOREWORD.mp4" controls></video>
+                        <p class="sub-title">TATE MAGOE</p>
+                        <p class="sub-title-2">FREE STATE MEC FOR <br> EDUCATION</p>
+                    </div>
+                </div>
+                <br> <br> <br> <br>
+            </div>
+            <div class="content-section green-content">
                 <br> <br>
-                <div class="split-tab">
-                    <div class="left-tab">
-                        <p class="text-tab">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Lorem
-                            ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Lorem
-                            ipsum dolor sit amet, consectetur adipiscing elit, <br> sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.
-                        </p>
+                <div class="cover-img">
+                    <div class="text-container">
+                        <div class="rows rows-t-d">
+                            <div class="row">
+                                <img src="./images/themba.png" alt="">
+                            </div>
+                            <div class="row">
+                                <img src="./images/THEMBA MOLA.png" alt="">
+                                <p class="text">In this report we celebrate the progress we have made in 2021 and the strides we have made in meeting the education-focused goals of the National Development Plan. Our investment in the diligent implementation of the District
+                                    Whole School Development model has yielded positive results. This is evident in the sustained pass rate demonstrated by the Matric classes of 2021; and the improved confidence level of the educators as they apply their
+                                    enhanced skills; amongst other highlights.</p>
+                            </div>
+                        </div>
+                        <div class="rows rows-m">
+                            <div class="row">
+                                <img src="./images/THEMBA MOLA.png" alt="">
+                                <img src="./images/themba.png" alt="">
+                            </div>
+                            <div class="row">
+
+                                <p class="text">In this report we celebrate the progress we have made in 2021 and the strides we have made in meeting the education-focused goals of the National Development Plan. Our investment in the diligent implementation of the District
+                                    Whole School Development model has yielded positive results. This is evident in the sustained pass rate demonstrated by the Matric classes of 2021; and the improved confidence level of the educators as they apply their
+                                    enhanced skills; amongst other highlights.</p>
+                            </div>
+                        </div>
+                        <br> <br>
+                        <p class="long-t">I was most excited about two important achievements announced with the 2021 National Senior Certificate results: firstly, the Free State province gained first place with a pass rate of 85.7%. This means that the province has been
+                            number one in 2013, 2016, 2017, 2019, 2020 and now, 2021. The second has been the stunning achievement of the Motheo District as number two in the country with an 87.9% pass rate, and Fezile Dabi third, with 87.5%.</p>
+
                     </div>
-                    <div class="right-tab">
-                        <img class="children" src="./images/children-updated.png" alt="">
+                    <div class="green-banner">
+                        <div class="div-text-container">
+                            <p class="long-t">I refer to these important accolades because KST has been intensively supporting the province and these two districts since 2013 and has contributed to the successes over the years. The results of the Motheo district are particularly
+                                exceptional, as it was previously ranked one of the poorest performing districts in the country. There are many factors that account for the successes achieved by the FSDOE, which include KST’s own consistent and sustained
+                                interventions via the DWSD model.</p>
+                        </div>
                     </div>
-                    <br> <br>
-                </div><br> <br>
-                <p class="text-tab">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Lorem ipsum dolor sit amet,
-                    consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Lorem ipsum dolor sit amet, consectetur
-                    adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Lorem ipsum dolor sit amet, consectetur adipiscing
-                    elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis.
-                </p><br> <br>
+                </div>
+                <div class="last-green-section">
+                    <div class="div-containers-flex">
+                        <div class="div-f green-bg">
+                            <p class="text">Our model is designed to be replicable, scalable, and sustainable. After eight years of implementing all the elements of this model in the Free State, we concluded this year, having activated a sustainability roadmap. The plan
+                                is to ensure that educator capacity, infrastructure, instructional and institutional leadership development, social development interventions and successful partnerships are sustained and would remain in place as a legacy
+                                of KST.</p>
+                        </div>
+                        <div class="div-f img-bg-1">
+
+                        </div>
+                    </div>
+                    <div class="div-containers-flex">
+                        <div class="div-f img-bg-2">
+
+                        </div>
+                        <div class="div-f green-bg">
+                            <p class="text">This plan was effected, having institutionalised resources and systems that are sufficient to ensure that KST’s methodologies and strategies continue to make a positive impact long after it has exited the province.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="content-section red-content">
+                <div class="red-bg-img">
+                    <div class="red-for-white">
+                        <div class="banner-r">
+                            <img src="./images/banner-r.png" alt="">
+                        </div>
+                        <br> <br>
+                        <div class="red-rows">
+                            <div class="row">
+                                <p class="text">It came as no surprise, notwithstanding a challenging two years disrupted by the COVID-19 pandemic, that the province achieved first place in the country with its 2021 NSC results. I firmly believe that our interventions
+                                    through the DWSD model and Theory of Change, have made a significant contribution to this achievement.</p>
+                            </div>
+                            <div class="row">
+                                <img src="./images/child-r.png" alt="">
+                            </div>
+                        </div>
+                        <img class="rect" src="./images/rectangle.png" alt="">
+                    </div>
+                    <div class="red-scroll">
+                        <div class="red-box">
+                            <p class="text">In addition to infrastructure development, educator and learner support, and social welfare interventions, KST also worked towards systemic change through an instructional leadership process, that aimed to impact the provincial
+                                and district offices. The success of our model inspired the Anglo-American South Africa Education Programme to contract KST to implement DWSD in over 100 schools in Mpumalanga, Limpopo and the Northern Cape.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="banner-red-2">
+                    <img src="./images/red-last-part.png" alt="">
+                </div>
+                <div class="red-last-section">
+                    <p>We wish to commend and thank all KST’s partners for rising to this challenge and contributing to the improvement of education for school children in South Africa. We particularly applaud the FSDoE for their steadfast partnership with
+                        KST and look forward to the model being shared with other provinces, as a best practice for improving education in our country. </p>
+                </div>
             </div>
             <div class="footer">
                 <p class="copyright">&#169; KST Annual Report 2021. All Rights Reserved.</p>
@@ -181,6 +221,7 @@
         animation: 'glueTopBottom'
     });
 </script>
+<script src="./scripts/menu-accordation.js"></script>
 
 
 </html>
