--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
         animation: 'glueTopBottom'
     });
 </script>
-<script src="./scripts/menu-accordation.js"></script>
+<script src="./menu-accordation.js"></script>
 
 
 </html>
